chore: add settings to surefire to hopefully fix problems with surefire tests